# hdf5-pickles

./: CMakeLists.txt  MARKERS.md  README.md  TOOLS.md  TUTORIAL.md  file.h5  h5explain
.devcontainer/: Dockerfile  devcontainer.json
examples/: chunk-b-tree-index.pk  minimal-hdf5.pk
pickles/: PLAN.md  btree.pk  common.pk  construct.pk  earray.pk  farray.pk  h5explain.pk  lookup3.pk  messages.pk  ohdr.pk  superblock.pk  v1_btree.pk  v2_btree.pk
src/: h5markers.cpp  main.cpp
tools/: h5explain
